refactor: move experiment fixtures from tmp/ to fixtures/
- Created fixtures/context-behavior-batch2/ with 3 experiment scenarios
- Created fixtures/context-behavior-batch3/ with 3 experiment scenarios
- Added fixtures/README.md documenting the fixture structure
- Added docs/experiments/README.md with experiment documentation
- Updated .gitignore to ignore tmp/ and .npm/ for future runs
- Deleted tmp/ after extracting all useful content

No LLM outputs were present in tmp/ — only seed data was preserved.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ xtdb/*.jar
 xtdb/*.log
 xtdb/*.pid
 *.tsbuildinfo
+
+# NPM cache
+.npm/
+
+# Transient experiment runs — copy valuable outputs to docs/experiments/outputs/ before deleting
+tmp/
